--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/FeedItemCell.xib
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/FeedItemCell.xib
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="FeedItemCell" id="OY2-tF-H3e" customClass="FeedItemCell">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="238"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="FeedItemCell" rowHeight="139" id="OY2-tF-H3e" customClass="FeedItemCell">
+            <rect key="frame" x="0.0" y="0.0" width="482" height="139"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="OY2-tF-H3e" id="EiK-aS-q9u">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RLb-uj-IBD">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="237"/>
+                        <rect key="frame" x="0.0" y="0.0" width="482" height="130"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="130" id="gVU-IG-sXy"/>
+                        </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" alpha="0.75" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4wb-79-OqP">
-                        <rect key="frame" x="0.0" y="216" width="600" height="21"/>
+                        <rect key="frame" x="0.0" y="109" width="482" height="21"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -24,20 +28,21 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="RLb-uj-IBD" firstAttribute="top" secondItem="EiK-aS-q9u" secondAttribute="top" id="CkN-6N-H1s"/>
-                    <constraint firstAttribute="trailing" secondItem="RLb-uj-IBD" secondAttribute="trailing" id="GRA-If-QWP"/>
-                    <constraint firstItem="4wb-79-OqP" firstAttribute="leading" secondItem="EiK-aS-q9u" secondAttribute="leading" id="MwY-CH-hjo"/>
-                    <constraint firstAttribute="bottom" secondItem="4wb-79-OqP" secondAttribute="bottom" id="QMq-pJ-K0V"/>
-                    <constraint firstAttribute="trailing" secondItem="4wb-79-OqP" secondAttribute="trailing" id="aq9-eq-Qil"/>
-                    <constraint firstAttribute="bottom" secondItem="RLb-uj-IBD" secondAttribute="bottom" id="bA7-pM-1WW"/>
-                    <constraint firstItem="RLb-uj-IBD" firstAttribute="leading" secondItem="EiK-aS-q9u" secondAttribute="leading" id="cua-wh-14a"/>
+                    <constraint firstItem="RLb-uj-IBD" firstAttribute="width" secondItem="4wb-79-OqP" secondAttribute="width" id="3WB-Up-Gpf"/>
+                    <constraint firstItem="RLb-uj-IBD" firstAttribute="bottom" secondItem="EiK-aS-q9u" secondAttribute="bottomMargin" id="CRR-0m-1Ae"/>
+                    <constraint firstItem="RLb-uj-IBD" firstAttribute="top" secondItem="EiK-aS-q9u" secondAttribute="top" id="Cw7-Q0-4Ll"/>
+                    <constraint firstAttribute="trailing" secondItem="RLb-uj-IBD" secondAttribute="trailing" id="J1e-FZ-CyI"/>
+                    <constraint firstItem="RLb-uj-IBD" firstAttribute="bottom" secondItem="4wb-79-OqP" secondAttribute="bottom" id="gT3-7Q-Xhr"/>
+                    <constraint firstItem="RLb-uj-IBD" firstAttribute="leading" secondItem="4wb-79-OqP" secondAttribute="leading" id="jha-dZ-F7s"/>
+                    <constraint firstItem="RLb-uj-IBD" firstAttribute="leading" secondItem="EiK-aS-q9u" secondAttribute="leading" id="mXs-PU-FUt"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="feedItemImage" destination="RLb-uj-IBD" id="itO-c7-W5s"/>
                 <outlet property="feedItemTitle" destination="4wb-79-OqP" id="fkH-01-jWG"/>
+                <outlet property="imageHeightConstraint" destination="gVU-IG-sXy" id="o3Q-nn-WRd"/>
             </connections>
-            <point key="canvasLocation" x="436" y="294"/>
+            <point key="canvasLocation" x="377" y="250.5"/>
         </tableViewCell>
     </objects>
 </document>
