--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/Main.storyboard
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/Main.storyboard
@@ -113,7 +113,7 @@
                             <constraint firstItem="46F-Jo-ObI" firstAttribute="leading" secondItem="QE4-ny-WZo" secondAttribute="leading" id="nCn-WW-kca"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" tag="2" title="" image="Settings" id="fBt-P2-bzm"/>
+                    <tabBarItem key="tabBarItem" tag="2" title="" image="info" id="fBt-P2-bzm"/>
                     <connections>
                         <outlet property="tableView" destination="46F-Jo-ObI" id="w1v-cG-UaI"/>
                     </connections>
@@ -220,7 +220,7 @@
     <resources>
         <image name="Map" width="31" height="31"/>
         <image name="QR" width="30" height="30"/>
-        <image name="Settings" width="30" height="30"/>
         <image name="Start" width="30" height="30"/>
+        <image name="info" width="32" height="32"/>
     </resources>
 </document>
