--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/ContentBlockTableViewCell.xib
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/ContentBlockTableViewCell.xib
@@ -14,7 +14,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nIv-r2-k2O">
+                    <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="page" translatesAutoresizingMaskIntoConstraints="NO" id="nIv-r2-k2O">
                         <rect key="frame" x="8" y="8" width="100" height="100"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="100" id="6K4-Pj-6KN"/>
@@ -64,5 +64,6 @@
     </objects>
     <resources>
         <image name="angleRight" width="8" height="13"/>
+        <image name="page" width="35" height="48"/>
     </resources>
 </document>
